--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "Some webpack config explorations",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "webpack": "webpack"
   },
   "keywords": [],
   "author": "Joseph McCormick <esmevane@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "webpack": "^2.2.1"
+  }
 }
